--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
+napi = { version = "2.12.0", default-features = false, features = [
+  "napi8",
+  "tokio_rt",
+  "async"
+] }
 napi-derive = "2.12.2"
 
 [build-dependencies]
